@@ -32,15 +32,15 @@ docker run -it docker.restate.dev/restatedev/restate-cli:latest invocations ls
 **Gradle (build.gradle.kts):**
 ```kt
 // For deploying as HTTP service
-implementation("dev.restate:sdk-java-http:2.4.1")
+implementation("dev.restate:sdk-java-http:2.9.0")
 // Or for deploying using AWS Lambda
-implementation("dev.restate:sdk-java-lambda:2.4.1")
+implementation("dev.restate:sdk-java-lambda:2.9.0")
 ```
 
 **Maven**: 
 ```xml Java/Maven
 <properties>
-    <restate.version>2.4.1</restate.version>
+    <restate.version>2.9.0</restate.version>
 </properties>
 <dependencies>
     <!-- For deploying as HTTP service -->
@@ -49,7 +49,7 @@ implementation("dev.restate:sdk-java-lambda:2.4.1")
         <artifactId>sdk-java-http</artifactId>
         <version>${restate.version}</version>
     </dependency>
-    <!-- For deploying using AWS Lambda -->
+    <!-- Or for deploying using AWS Lambda -->
     <dependency>
         <groupId>dev.restate</groupId>
         <artifactId>sdk-java-lambda</artifactId>
@@ -57,6 +57,8 @@ implementation("dev.restate:sdk-java-lambda:2.4.1")
     </dependency>
 </dependencies>
 ```
+
+On JDK 23+, pass `--enable-native-access=ALL-UNNAMED` as a JVM argument (or set `Enable-Native-Access: ALL-UNNAMED` in the JAR manifest) to silence the native-access warning printed at startup.
 
 ### Minimal Scaffold
 
@@ -93,9 +95,9 @@ curl localhost:8080/MyService/greet --json '"World"'
 ## Core Concepts
 
 - Restate provides durable execution: if a handler crashes or the process restarts, Restate replays the handler from the last completed step, not from scratch.
-- All handlers receive a Context object (`ctx`) as their first parameter. Use ctx methods for all I/O and side effects.
+- Access all Restate functionality (state, calls, side effects, timers, ...) through the static methods on the `Restate` class (e.g. `Restate.state()`, `Restate.run(...)`, `Restate.sleep(...)`).
 - Handlers take one optional JSON-serializable input parameter and return one JSON-serializable output.
-- Code generation produces typed client classes (e.g., `MyServiceClient`) from annotated service definitions.
+- Call other services through `Restate.service(...)` / `Restate.serviceHandle(...)` (and the virtual-object/workflow variants) with a method reference.
 
 ---
 
@@ -136,8 +138,8 @@ public class MyObject {
 }
 ```
 
-- **Exclusive handlers** (`@Handler`): only one executes at a time per key. Use for writes.  Receive `ObjectContext`.
-- **Shared handlers** (`@Shared`): run concurrently per key. Use for reads.  Receive `SharedObjectContext`.
+- **Exclusive handlers** (`@Handler`): only one executes at a time per key. Use for writes. Have read/write state access via `Restate.state()`.
+- **Shared handlers** (`@Shared`): run concurrently per key. Use for reads. Have read-only state access.
 
 ### Workflow
 
@@ -177,7 +179,7 @@ public class MyWorkflow {
 
 ## State Management
 
-Never use global variables for state -- it is not durable across restarts. Use `StateKey` with `ctx.get`/`ctx.set` instead (available on `ObjectContext` and `WorkflowContext`):
+Never use global variables for state -- it is not durable across restarts. Use `StateKey` with `Restate.state().get`/`Restate.state().set` instead:
 
 ```java
 var state = Restate.state();
@@ -203,17 +205,23 @@ private static final StateKey<List<String>> ITEMS =
 
 ### Request-Response Calls
 
-Code generation creates typed client classes from annotated service definitions:
+Two client styles are available:
+
+- **Simple client** (`Restate.service(...)` / `Restate.virtualObject(...)` / `Restate.workflow(...)`): the call is awaited inline and returns the result directly. Use for straightforward request-response.
+- **Handle-based client** (`Restate.serviceHandle(...)` / `Restate.virtualObjectHandle(...)` / `Restate.workflowHandle(...)`, called with a method reference): returns a `DurableFuture` you await explicitly. Use it for invocation options (e.g. idempotency keys), timeouts, or concurrency.
 
 ```java
-String svcResponse =
+// Simple client: the call is awaited inline and returns the result directly.
+// Use this for straightforward request-response calls.
+String svcResponse = Restate.service(MyService.class).myHandler(request);
+String objResponse = Restate.virtualObject(MyObject.class, objectKey).myHandler(request);
+String wfResponse = Restate.workflow(MyWorkflow.class, workflowId).run(request);
+
+// Handle-based client: returns a DurableFuture that you await explicitly.
+// Use it for invocation options (e.g. an idempotency key), timeouts, or concurrency.
+// (virtualObjectHandle(...) / workflowHandle(...) work the same way.)
+String svcResult =
     Restate.serviceHandle(MyService.class).call(MyService::myHandler, request).await();
-String objResponse =
-    Restate.virtualObjectHandle(MyObject.class, objectKey)
-        .call(MyObject::myHandler, request)
-        .await();
-String wfResponse =
-    Restate.workflowHandle(MyWorkflow.class, workflowId).call(MyWorkflow::run, request).await();
 ```
 
 ### One-Way Calls (Fire-and-Forget)
@@ -252,9 +260,9 @@ Restate.send(Request.of(target, TypeTag.of(String.class), TypeTag.of(String.clas
 
 ---
 
-## Side Effects / ctx.run
+## Side Effects / Restate.run
 
-Never call external APIs, databases, or non-deterministic functions directly in a handler. Wrap them in `ctx.run`:
+Never call external APIs, databases, or non-deterministic functions directly in a handler. Wrap them in `Restate.run`:
 
 ```java
 // Wrap non-deterministic code in Restate.run
@@ -273,7 +281,7 @@ String namedResult = Restate.run("my-side-effect", String.class, () -> callExter
 
 ## Deterministic Helpers
 
-Never use `Math.random()`, `System.currentTimeMillis()`, or `new Date()` directly -- they break deterministic replay. Use ctx helpers instead:
+Never use `Math.random()`, `System.currentTimeMillis()`, or `new Date()` directly -- they break deterministic replay. Use `Restate.random()` / `Restate.instantNow()` instead:
 
 ```java
 float value = Restate.random().nextFloat();
@@ -284,7 +292,7 @@ UUID uuid = Restate.random().nextUUID();
 
 ## Durable Timers
 
-Never use `Thread.sleep`. Use `ctx.sleep` for durable delays that survive crashes and restarts:
+Never use `Thread.sleep`. Use `Restate.sleep` for durable delays that survive crashes and restarts:
 
 ```java
 Restate.sleep(Duration.ofHours(30));
@@ -393,7 +401,7 @@ All handler inputs/outputs and state values use Jackson JSON serialization by de
 
 ### Custom Serde
 
-Implement `Serde<T>` for custom serialization when Jackson defaults are not sufficient (binary payloads, non-JSON formats, or types with custom encoding). Pass the serde when declaring a `StateKey`, `DurablePromiseKey`, awakeable, or `ctx.run` call.
+Implement `Serde<T>` for custom serialization when Jackson defaults are not sufficient (binary payloads, non-JSON formats, or types with custom encoding). Pass the serde when declaring a `StateKey`, `DurablePromiseKey`, awakeable, or `Restate.run` call.
 
 ---
 
@@ -454,9 +462,8 @@ restateClient
 
 ## Java-Specific Pitfalls
 
-- **Code generation creates typed client classes** (e.g., `MyServiceClient`) from `@Service`/`@VirtualObject`/`@Workflow` annotations. Use these for type-safe calls.
 - **Use Restate's future combinators, NOT `CompletableFuture`.** Native Java futures break deterministic replay.
-- **Never use `Thread.sleep`, `Math.random()`, or `System.currentTimeMillis()`** -- use Restate context actions instead.
+- **Never use `Thread.sleep`, `Math.random()`, or `System.currentTimeMillis()`** -- use `Restate` SDK actions instead.
 - **Never use global mutable variables for state** -- use Restate's K/V store for durable state.
 - **For detailed API reference:** use the MCP server or JavaDocs.
 
